--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
   Bamboo Stand
   Pledge $25 or more
   You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
+  you'll be added to a special Backer member list.
   101 left
   Select Reward
 
   Black Edition Stand
   Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+  You get a Black Special Edition computer stand and a personal thank you. You'll be added to our Backer
   member list. Shipping is included.
   64 left
   Select Reward
 
   Mahogany Special Edition
   Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You'll be added
   to our Backer member list. Shipping is included.
   0 left
   Out of Stock
@@ -69,7 +69,7 @@
   Bamboo Stand
   Pledge $25 or more
   You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
+  you'll be added to a special Backer member list.
   101 left
 
   <!-- Selected pledge start -->
@@ -80,7 +80,7 @@
 
   Black Edition Stand
   Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+  You get a Black Special Edition computer stand and a personal thank you. You'll be added to our Backer
   member list. Shipping is included.
   64 left
 
@@ -92,7 +92,7 @@
 
   Mahogany Special Edition
   Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You'll be added
   to our Backer member list. Shipping is included.
   0 left
 
